refactor(ProblemDetails): minor